src/test/deca/syntax/invalid/provided/class42.java
class A {
	int x;
    x==50;
}
{
    A a = new A();
    a.somme();
}
